@@ -61,8 +61,6 @@
 
 	/* signal handling */
 	int	exit_flag = 0;
-	static	sigset_t		main_sigmask;
-	static	struct	sigaction	main_sa;
 
 	/* everything else */
 	static	char	*pidfn = NULL;
@@ -167,18 +165,19 @@ static void exit_cleanup(int sig)
 
 static void setup_signals(void)
 {
-	sigemptyset(&main_sigmask);
-	main_sa.sa_mask = main_sigmask;
-	main_sa.sa_flags = SA_RESTART || SA_NOCLDSTOP;
+	struct sigaction	sa;
 
-	main_sa.sa_handler = exit_cleanup;
-	sigaction(SIGTERM, &main_sa, NULL);
-	sigaction(SIGINT, &main_sa, NULL);
-	sigaction(SIGQUIT, &main_sa, NULL);
+	sigemptyset(&sa.sa_mask);
+	sa.sa_flags = SA_RESTART | SA_NOCLDSTOP;
 
-/*	main_sa.sa_handler = SIG_IGN;
-	sigaction(SIGHUP, &main_sa, NULL);
-	sigaction(SIGPIPE, &main_sa, NULL);*/
+	sa.sa_handler = exit_cleanup;
+	sigaction(SIGTERM, &sa, NULL);
+	sigaction(SIGINT, &sa, NULL);
+	sigaction(SIGQUIT, &sa, NULL);
+
+/*	sa.sa_handler = SIG_IGN;
+	sigaction(SIGHUP, &sa, NULL);
+	sigaction(SIGPIPE, &sa, NULL);*/
 }
 
 /* (*GSourceFunc) wrapper */
