@@ -9,9 +9,6 @@ extern char		*device_path;
 extern int		upsfd, extrafd, broken_driver, experimental_driver, do_lock_port, exit_flag;
 extern unsigned int	poll_interval;
 
-/* drivers can add additional signal handlers in upsdrv_initups() */
-extern struct sigaction	main_sa;
-
 /* functions & variables required in each driver */
 void upsdrv_initups(void);	/* open connection to UPS, fail if not found */
 void upsdrv_initinfo(void);	/* prep data, settings for UPS monitoring */
