@@ -1,3 +1,7 @@
+Mon Apr 14 07:05:09 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
+
+ - drivers/main-hal.c,main.[ch],updrvctl.c: cleanup signal handling
+
 Mon Apr 14 06:58:39 UTC 2008 / Arjen de Korte <arjen@de-korte.org>
 
  - server/upsd.c: cleanup signal handling, removed -f option
